--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,102 @@
-styles.css
+
+.container{
+    
+    display: grid;
+    grid-gap: 19px;
+    
+}
+
+
+header { 
+    
+    grid-area: header;
+    display: flex;
+    display: inline-block; 
+    padding: 1em;
+    align-items: center;
+    text-align: center;
+    color:#FFFFFF;
+    background-color:#63B3ED; 
+}
+#header{
+    grid-row: 1;
+    grid-column: 1/4;
+    padding: 20;
+    
+}
+body{
+   
+    font-size: 18px;
+    color: #2D3748;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+#main{grid-column: 1/3;
+    grid-row: 2;
+    padding: 90px;
+    padding-top: 0;
+
+}
+.aside{
+    color:#4299E1;
+}
+#aside{
+    grid-column: 3;
+    grid-row: 2;
+    padding: 85px;
+}
+footer{
+    
+    background-color: #2C5282;
+    color:#FFFFFF ;
+} 
+#footer{
+    grid-column: 1/4;
+    grid-row: 3;
+}
+
+
+h4{
+    font-size: 32px;
+    color: #48BB78;
+}
+h1{
+    font-size: 36px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+h2{
+    font-size: 32px;
+    color: #48BB78 ;
+}
+h3{
+    font-size: 20px;
+    color:#48BB78;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+#first{
+    color:#000000;
+    font-size: 20px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+section{
+    padding: 20px;
+    background-color: #E2E8F0 ;
+}
+img{
+    border-radius: 50%;
+}
+#secondp{
+    color: #718096;
+}
+#thirdp{
+    color: #718096
+}
+a{
+    color: #4299E1;
+}
+
+
+
+
+
+
+
